getting somewhere with swagger
