# record-server-wsdl/src/main/swagger/swagger-record-server.yml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: 2.0.2
+  version: 2.0.3
   title: Recordserver
   description: TODO
 host: recordserver.trafalgar.ws:8080
@@ -65,20 +65,23 @@ paths:
             $ref: '#/definitions/NewMapEntryResponse'
 definitions:
   RankingEntry:
-    type: array
-    items:
-      type: object
-      properties:
-        id:
-          type: string
-        position:
-          type: integer
-          format: int32
-        time:
-          type: number
-          format: float
-        username:
-          type: string
+    type: object
+    properties:
+      rankingEntry:
+        type: array
+        items:
+          type: object
+          properties:
+            id:
+              type: string
+            position:
+              type: integer
+              format: int32
+            time:
+              type: number
+              format: float
+            username:
+              type: string
   NewMapEntryRequest:
     type: object
     properties:
